fix : fixed code

--- a/09-04-21/task2/index.html
+++ b/09-04-21/task2/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Box</h1>
+    <h1>purple<span class=focus>Wayz</span></h1>
+    <div>
+        <h4 id="result"></h4>
+    </div>
     <div id="b1" class="outermost__box">
         <div id="b2" class="outer__box">
             <div id="b3" class="inner__box">
