fix : replaced value with type

--- a/16-04-21/index.html
+++ b/16-04-21/index.html
@@ -18,49 +18,49 @@
 
     <section class="card-deck">
         <ul id="card-deck">
-            <li class="card" value="firefox">
+            <li class="card" type="firefox">
                 <i class="fa fa-firefox" aria-hidden="true"></i>
             </li>
-            <li class="card" value="facebook">
+            <li class="card" type="facebook">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
             </li>
-            <li class="card" value="linkedin">
+            <li class="card" type="linkedin">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
             </li>
-            <li class="card" value="reddit">
+            <li class="card" type="reddit">
                 <i class="fa fa-reddit-alien" aria-hidden="true"></i>
             </li>
-            <li class="card" value="spotify">
+            <li class="card" type="spotify">
                 <i class="fa fa-spotify" aria-hidden="true"></i>
             </li>
-            <li class="card" value="twitter">
+            <li class="card" type="twitter">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
             </li>
-            <li class="card" value="reddit">
+            <li class="card" type="reddit">
                 <i class="fa fa-reddit-alien" aria-hidden="true"></i>
             </li>
-            <li class="card" value="youtube">
+            <li class="card" type="youtube">
                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
             </li>
-            <li class="card" value="spotify">
+            <li class="card" type="spotify">
                 <i class="fa fa-spotify" aria-hidden="true"></i>
             </li>
-            <li class="card" value="facebook">
+            <li class="card" type="facebook">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
             </li>
-            <li class="card" value="snapchat">
+            <li class="card" type="snapchat">
                 <i class="fa fa-snapchat-ghost" aria-hidden="true"></i>
             </li>
-            <li class="card" value="twitter">
+            <li class="card" type="twitter">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
             </li>
-            <li class="card" value="firefox">
+            <li class="card" type="firefox">
                 <i class="fa fa-firefox" aria-hidden="true"></i>
             </li>
-            <li class="card" value="snapchat">
+            <li class="card" type="snapchat">
                 <i class="fa fa-snapchat-ghost" aria-hidden="true"></i>
             </li>
-            <li class="card" value="youtube">
+            <li class="card" type="youtube">
                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
             </li>
             <li class="card" value="linkedin">
