fix : type on last list item

--- a/16-04-21/index.html
+++ b/16-04-21/index.html
@@ -63,7 +63,7 @@
             <li class="card" type="youtube">
                 <i class="fa fa-youtube-play" aria-hidden="true"></i>
             </li>
-            <li class="card" value="linkedin">
+            <li class="card" type="linkedin">
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
             </li>
         </ul>
