fix : replaced class with id

--- a/16-04-21/index.html
+++ b/16-04-21/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <section class="outputs">
-        Score : <span class="score">0</span>
+        Moves : <span id="score">0</span>
     </section>
 
     <section class="card-deck">
