added search component

--- a/28-05-21/index.html
+++ b/28-05-21/index.html
@@ -10,10 +10,13 @@
                  href="https://byoticss.netlify.app/css/component.css">
 </head>
 <body>
+    <div class="input" style="margin: 1rem 0 1rem 0; padding: 0.5rem;">
+        <input type="text" style="padding: 0.2rem 1rem;" id="query" placeholder="search for your tasks..."/>
+    </div>
     <form action="#">
         <div class="input">
             <label for="">Tasks</label>
-            <input type="text" id="task"/>
+            <input style="padding: 0.2rem 1rem;" type="text" id="task" placeholder="e.g : assigment"/>
         </div>
         <button class="btn btn-primary" id="btn">+</button>
     </form>
